# A-auth

./: .gitignore  A-AUTH_PRD.md  AAUTH_SKILL.md  CHANGELOG.md  CLAUDE.md  README.md  SESSION_NOTES.md  TODOS.md  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  release.yml
aauth/: __init__.py
aauth/cli/: __main__.py
aauth/daemon/: notify.py  push.py  server.py
aauth/db/: registry.py
aauth/sdk/: client.py
app/: app.json  package-lock.json  package.json
app/app/: _layout.tsx  index.tsx  pair.tsx
app/app/approval/: [id].tsx
app/hooks/: useDaemon.ts  useNotifications.ts
tests/: test_registry.py  test_server.py
