[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aauth"
version = "0.1.0"
description = "Zero-trust credential proxy for AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["ai", "agents", "auth", "security", "credentials"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

[project.scripts]
aauth = "aauth.cli.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aauth*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
